--- a/views/Bio.ejs
+++ b/views/Bio.ejs
@@ -1,42 +1,40 @@
 <% include partials/head %>
 
-<div class="container-fluid"> 
-    <div class="container" style="display: block">
-        <div class="container-bio col-6 offset-3">
-            <h1 class="form-title" style="text-align: center;">Maral Abkarian</h1>
-            <p>
-                Née durant les années 60, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents,
-                Maral a dans la continuité de ses ancêtres déracinés de leur terre natale par le génocide arménien en 1915,  vécu le…
-            </p>
-            <p>
-                C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal,
-                qu’elle vit le jour. Dès son plus jeune âge, l’enfant était remarquée pour son talent artistique et sa sensibilité,
-                raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère espiègle.
-            </p>
-            <p>
-                Le temps passa et la petite fille grandissante devint une adolescente en fleur au pays des cèdres, contrée d’accueil de ses parents natals.
-                Mais les nuages obscures s’étendant, la guerre civile plongea le chaos, obligeant la fratrie à fuir vers la Syrie, s’envolant à nouveau vers les terres d’exil, jusqu’en Amérique.
-            </p>
-            <p>
-                De retour finalement en France, Maral a de ses carnets de voyages cultivé une riche expérience de culture très diverses,
-                française, anglo-saxonne, arabo-levantine, arméno-ottomane et hellénique. 
-            </p>
-            <p>
-                Sa quête artistique est celle d’un beau naturel, authentique, dépouillé vers une authenticité directe et accessible à tous, à l’image de son hypersensibilité,
-                spirituelle. Les figures gracieuses, le partage et l’âpreté de la vie humaine sont mises à nues dans son travail, tantôt figuratif, tantôt semi-abstrait, avec le goût du relief et d’un toucher parfois brut, non sans délicatesse.
-            </p>
-            <p>
-                Son goût pour les portraits et les paysages apparaissent régulièrement, témoignant également d’une innocence, sensualité, fraîcheur perdue à notre époque de plus en plus connectée.
-                L’ancien et le moderne, l’occidental et l’oriental, le spirituel et le terrestre, la vie et l’au-delà, thèmes complémentaires que Maral aime exprimer à travers ses œuvres, un message d’espoir et joie, de profondeur, parfois teinté de mélancolie face aux contingences qu’endure l’humain.
-            </p>
-            <hr />
+<div class="container">
+    <div class="container-bio col-8 offset-2">
+        <h1 class="form-title" style="text-align: center;">Maral Abkarian</h1>
+        <p>
+            Née durant les années 60, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents,
+            Maral a dans la continuité de ses ancêtres déracinés de leur terre natale par le génocide arménien en 1915,  vécu le…
+        </p>
+        <p>
+            C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal,
+            qu’elle vit le jour. Dès son plus jeune âge, l’enfant était remarquée pour son talent artistique et sa sensibilité,
+            raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère espiègle.
+        </p>
+        <p>
+            Le temps passa et la petite fille grandissante devint une adolescente en fleur au pays des cèdres, contrée d’accueil de ses parents natals.
+            Mais les nuages obscures s’étendant, la guerre civile plongea le chaos, obligeant la fratrie à fuir vers la Syrie, s’envolant à nouveau vers les terres d’exil, jusqu’en Amérique.
+        </p>
+        <p>
+            De retour finalement en France, Maral a de ses carnets de voyages cultivé une riche expérience de culture très diverses,
+            française, anglo-saxonne, arabo-levantine, arméno-ottomane et hellénique. 
+        </p>
+        <p>
+            Sa quête artistique est celle d’un beau naturel, authentique, dépouillé vers une authenticité directe et accessible à tous, à l’image de son hypersensibilité,
+            spirituelle. Les figures gracieuses, le partage et l’âpreté de la vie humaine sont mises à nues dans son travail, tantôt figuratif, tantôt semi-abstrait, avec le goût du relief et d’un toucher parfois brut, non sans délicatesse.
+        </p>
+        <p>
+            Son goût pour les portraits et les paysages apparaissent régulièrement, témoignant également d’une innocence, sensualité, fraîcheur perdue à notre époque de plus en plus connectée.
+            L’ancien et le moderne, l’occidental et l’oriental, le spirituel et le terrestre, la vie et l’au-delà, thèmes complémentaires que Maral aime exprimer à travers ses œuvres, un message d’espoir et joie, de profondeur, parfois teinté de mélancolie face aux contingences qu’endure l’humain.
+        </p>
+        <hr />
 
-            <h2 class="form-title" style="text-align: center;"><i>Her taste for portraits and landscapes</i></h2>
-            <p>
-                Son frère, Simon Abkarian, comédien à la notoriété établie, Maral Abkarian est également connue pour ses talents de gastronome,
-                à la personnalité démonstrative et chaleureuse, non sans pudeur, seule sœur de ses trois frères.
-            </p>
-        </div>
+        <h2 class="form-title" style="text-align: center;"><i>Her taste for portraits and landscapes</i></h2>
+        <p>
+            Son frère, Simon Abkarian, comédien à la notoriété établie, Maral Abkarian est également connue pour ses talents de gastronome,
+            à la personnalité démonstrative et chaleureuse, non sans pudeur, seule sœur de ses trois frères.
+        </p>
     </div>
 </div>
   
