changed routes that were using get to affect data to post, changed caller to these routes, added csrf protection, xss protection, added helmet

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -44,6 +44,7 @@
                 <span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
 
                 <div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
+                <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
                 <input type="submit" class="logbtn mt-3" value="Envoyer" id="submit-contact">
             </form>
           </div>
