--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -52,6 +52,7 @@
 					</div>
 					<div class="row mt-4">
 						<div class="col-6 offset-3">
+							<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 							<input type="submit" class="logbtn" value="Enregistrer" id="submit-deliveryform" />
 						</div>
 					</div>
