--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -45,6 +45,7 @@
 						<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
 						<div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
+						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<input type="submit" class="logbtn" value="Inscription" id="submit-register" />
 					</form>
 				</div>
@@ -55,6 +56,7 @@
 						<input placeholder="Email" type="email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
 						<input placeholder="Mot de passe" type="password" name="password" required />
 
+						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<input type="submit" class="logbtn" value="Connexion" id="submit-login" />
 					</form>
 				</div>
@@ -87,6 +89,7 @@
 						<input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="" onkeyup="Validate.Email(this);" required />
 						<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
 
+						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw" />
 					</form>
 				</div>
