--- a/views/User.ejs
+++ b/views/User.ejs
@@ -27,6 +27,8 @@
 					<label class="control-label">Nom de compte</label>
 					<input class="form-control" type="text" id="name" name="name" value="<% if (locals.user.name) { %><%= locals.user.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required />
 					<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
+
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-nameform" />
 				</form>
 
@@ -34,6 +36,8 @@
 					<label class="control-label">Email</label>
 					<input class="form-control" type="email" id="email" name="email" value="<% if (locals.user.email) { %><%= locals.user.email %><% } %>" onkeyup="Validate.Email(this);" required />
 					<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
+
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-emailform" />
 				</form>
 
@@ -49,6 +53,8 @@
 					<label class="control-label">Mot de passe <i>(confirmation)</i></label>
 					<input class="form-control" type="password" id="password2" name="password2" placeholder="*********" onkeyup="Validate.Password2(this);" required />
 					<span id="i_password2" class="form-info"><b>Password</b> has to be the <b>identical</b> to the one you just entered</span>
+
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-passwordform" />
 				</form>
 			</section>
@@ -146,6 +152,7 @@
 								>
 							</div>
 							<div class="col-6">
+								<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 								<input type="submit" class="logbtn" value="Enregistrer" id="submit-deliveryform" />
 							</div>
 						</div>
