--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
           <% for (let index = 0; index < 5; index++) { %>
               <% if (locals.front[index] && locals.front[index].null != true) { %>
                 <div class="carousel-item <% if(index == 0) { %>active<% } %>">
-                  <a href="#expand"><img onclick="expand(this);" src="/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide"></a>
+                  <a href="#expand"><img class="w-100" onclick="expand(this);" src="/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide"></a>
                   </div>
                   <% i = i + 1; %>
               <% } %>
