--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<title><%= (locals.active) ? locals.active : 'Maral' %></title>
 		<!-- JQuery -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
