--- a/views/restricted/Bio.ejs
+++ b/views/restricted/Bio.ejs
@@ -20,5 +20,5 @@
 </div>
 
 <script src="/scripts/blog/bio.js" defer></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include ../partials/footer %>
