--- a/views/restricted/Bio.ejs
+++ b/views/restricted/Bio.ejs
@@ -6,7 +6,7 @@
 			<h1 class="single-title text-center">Changer l'image de la biographie</h1>
 			<form id="bio" method="POST" action="/api/front/bio" enctype="multipart/form-data">
 				<hr />
-				<img class="col-md-6 offset-md-3 mt-3 mb-3" src="/img/upload/biopic.png" />
+				<img alt="Biographie picture" class="col-md-6 offset-md-3 mt-3 mb-3" src="/img/upload/biopic.png" />
 				<div class="form-group text-center">
 					<label for="img" id="imglabel" class="filebtn">Choisir une image</label>
 					<input class="inputfile" type="file" name="img" id="img" required />
