--- a/views/restricted/Bio.ejs
+++ b/views/restricted/Bio.ejs
@@ -1,11 +1,10 @@
 <% include ../partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper">
-			<h1 class="single-title text-center">Changer l'image de la biographie</h1>
+<div class="full-container" id="container-landing">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1">
+			<h1 class="square-title text-center">Changer l'image de la biographie</h1>
 			<form id="bio" method="POST" action="/api/front/bio" enctype="multipart/form-data">
-				<hr />
 				<img alt="Biographie picture" class="col-md-6 offset-md-3 mt-3 mb-3" src="/img/upload/biopic.png" />
 				<div class="form-group text-center">
 					<label for="img" id="imglabel" class="filebtn">Choisir une image</label>
@@ -13,7 +12,7 @@
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<input type="submit" class="logbtn" value="Valider" id="submit-shop" />
+				<input type="submit" class="submit-btn" value="Valider" id="submit-shop" />
 			</form>
 		</div>
 	</div>
