--- a/views/restricted/Bio.ejs
+++ b/views/restricted/Bio.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
-<div class="full-container" id="container-landing">
-	<div class="container container-front">
+<div class="full-container">
+	<div class="container">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Changer l'image de la biographie</h1>
 			<form id="bio" method="POST" action="/api/front/bio" enctype="multipart/form-data">
