--- a/views/restricted/Bio.ejs
+++ b/views/restricted/Bio.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Changer l'image de la biographie</h1>
